@@ -1,5 +1,5 @@
 /*
- * $Id: route_struct.h,v 1.42 2008/04/17 16:22:18 tirpi Exp $
+ * $Id: route_struct.h,v 1.43 2008/08/08 20:47:53 andrei Exp $
  *
  *
  * Copyright (C) 2001-2003 FhG Fokus
@@ -79,6 +79,7 @@ enum { FORWARD_T=1, SEND_T, DROP_T, LOG_T, ERROR_T, ROUTE_T, EXEC_T,
 		FORWARD_TCP_T,
 		FORWARD_UDP_T,
 		FORWARD_TLS_T,
+		FORWARD_SCTP_T,
 		SEND_TCP_T,
 		FORCE_RPORT_T,
 		SET_ADV_ADDR_T,
@@ -86,10 +87,9 @@ enum { FORWARD_T=1, SEND_T, DROP_T, LOG_T, ERROR_T, ROUTE_T, EXEC_T,
 		FORCE_TCP_ALIAS_T,
 		LOAD_AVP_T,
 		AVP_TO_URI_T,
-                FORCE_SEND_SOCKET_T,
-                ASSIGN_T,
-                ADD_T
-
+		FORCE_SEND_SOCKET_T,
+		ASSIGN_T,
+		ADD_T
 };
 enum { NOSUBTYPE=0, STRING_ST, NET_ST, NUMBER_ST, IP_ST, RE_ST, PROXY_ST,
 		EXPR_ST, ACTIONS_ST, MODEXP_ST, MODFIXUP_ST, URIHOST_ST, URIPORT_ST,
